--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8  offset-lg-2">
-                <h3 class="mt-5"> 복실이 Live Streaming</h3>
+                <h3 class="mt-5"> 복실이 Live 스트리밍</h3>
                
                 <img src="{{ url_for('video_feed') }}" width="100%">
                
