--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facemong 동영상 스트리밍</title>
+    <title>Facemeong 동영상 스트리밍</title>
 </head>
 <body>
     <div class="container">
